--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,6 +2,8 @@
 main:
   - title: "Home"
     url: /
+  - title: "Publications"
+    url: /publications/
   - title: "About"
     url: /about/
   # - title: "Sample Posts"
