updated bio with ipt.ch job

--- a/_config.yml
+++ b/_config.yml
@@ -97,7 +97,7 @@ analytics:
 author:
   name             : "Claude Hähni"
   avatar           : "/assets/images/bio-photo-square.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "Researcher at ETH Zurich"
+  bio              : "IT Consultant at ipt.ch"
   location         : "Zurich, Switzerland"
   email            :
   links:
